--- a/ASICamera.NET.csproj
+++ b/ASICamera.NET.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{E71C232D-0152-4DFF-AB70-41BDF43E8BBE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ASICamera.NET</RootNamespace>
+    <RootNamespace>AstroCamera.NET</RootNamespace>
     <AssemblyName>ASICamera.NET</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -16,6 +16,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Debug\</OutputPath>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile>bin\x64\Debug\ASICamera.NET.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
@@ -34,6 +36,7 @@
   <ItemGroup>
     <Compile Include="ASICamera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QHYCamera.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
