--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-*.pdb
-*.pdb
-bin/x64/Debug/*
-obj/x64/Debug/*
-/bin/x64/Debug/ASICamera.NET.dll
-/bin/x64/Debug/ASICamera.NET.pdb
-/obj/x64/Debug/ASICamera.NET.csproj.FileListAbsolute.txt
-/obj/x64/Debug/ASICamera.NET.dll
-/obj/x64/Debug/ASICamera.NET.pdb
+
+/bin/x64/Debug/*
+/obj/x64/Debug/*
+/bin/x64/Debug/*
