--- a/ASICamera.NET.csproj
+++ b/ASICamera.NET.csproj
@@ -38,5 +38,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QHYCamera.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\src\bin\QHY\x64\qhyccd.dll">
+      <Link>qhyccd.dll</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
