--- a/AstroCam.Nativ.NET.csproj
+++ b/AstroCam.Nativ.NET.csproj
@@ -9,6 +9,7 @@
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <OutputPath>bin\x64\Debug\</OutputPath>
@@ -26,6 +27,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\bin\ASI_ZWO\ASICamera2.dll" Link="ASICamera2.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\src\bin\Moravian\x64\cXusb.dll" Link="cXusb.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\src\bin\Moravian\x64\gXeth.dll" Link="gXeth.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\src\bin\Moravian\x64\gXusb.dll" Link="gXusb.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
